fixed footer on mobile

--- a/css/footer.scss
+++ b/css/footer.scss
@@ -69,7 +69,6 @@
  padding-bottom: 4.5vh;
  margin-top: 5vh;
  max-width: 100vw;
- gap: 14vw; //gap between flex elements
 }
 
 @media (orientation: landscape) { //if orientation of screen is landscape
